src/objects/HR_Employee__c.object
<CustomObject>
    <fields>
        <fullName>HR_Birthdate__c</fullName>
        <defaultValue>DATE(1978,11,12)</defaultValue>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Cost_Center__c</fullName>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Product Marketing</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Desk_Phone__c</fullName>
        <defaultValue>&apos;415-555-1111&apos;</defaultValue>
        <label>Desk Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HR_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HR_Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Remote Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <label>Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HR_Onboarding_Mentor__c</fullName>
        <label>Onboarding Mentor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HR_Position__c</fullName>
        <label>Position</label>
        <referenceTo>HR_Job_Requisition__c</referenceTo>
        <relationshipLabel>Hired Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HR_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HR_Title__c</fullName>
        <defaultValue>&apos;Sales Rep&apos;</defaultValue>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HR_Employee_ID__c</columns>
        <columns>HR_Title__c</columns>
        <columns>HR_Department__c</columns>
        <columns>HR_Email__c</columns>
        <columns>HR_Mobile_Phone__c</columns>
        <columns>HR_Employee_Type__c</columns>
        <columns>HR_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Employees</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>